# CFScanner-rust

./: Cargo.toml  README.md  Readme.md
ip_subnets/: 103.21.244.0_22  103.22.200.0_22  103.31.4.0_22  104.24.0.0_14  108.162.192.0_18  141.101.64.0_18  173.245.48.0_20  188.114.96.0_20  45.131.218.0_20  45.159.219.211_20  part-resultab  part-resultad  part-resultae  part-resultaf  part-resultag  part-resultah  part-resultai  part-resultaj  part-resultak  part-resultal  part-resultam
servers/: config.json
src/: fs_and_config_fns.rs  ip_fns.rs  main.rs  main_new_thread.rs  request_fns.rs  trojan_config_model.rs  vmess_config_model.rs
