[package]
name = "CFScanner-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
datetime = "0.5.2"
debug_print = "1.0.0"
indicatif = "0.17.3"
once_cell = "1.17.0"
reqwest = {version = "0.11.14", features = ["blocking"]}
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.93"
threadpool = "1.8.1"
